--- a/global.css
+++ b/global.css
@@ -1,5 +1,5 @@
 body {
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+  font-family: sys, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
   color: #ffffff;
   margin: 0;
   padding: 0;
@@ -25,7 +25,7 @@ body {
 }
 
 .imagenLogo {
-  height: 70px;
+  height: 110px;
   width: auto;
 }
 
@@ -98,4 +98,36 @@ body {
 .tiktok{
   height: 35px;
   width: auto;
+}
+
+.contenidorCentral{
+  max-width: 1100px;
+  margin: auto;
+  background-color: rgb(196, 211, 255);
+  font-family: sys, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+  color: rgb(159, 144, 214);
+  padding-top: 10px;
+  align-items: center; 
+  display: flex;
+  flex-direction: column;
+  
+}
+.contenidorCentral .contenedor{
+  max-width: 1100px;
+  margin: auto;
+  background-color: rgb(196, 211, 255);
+  display: inline-block;
+}
+.contenidorCentral .logo-titulo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(255, 255, 255);
+  font-size:large 
+}
+
+.imagenLogo {
+  height: 110px;
+  width: auto;
+  align-items: center;
 }
