--- a/global.css
+++ b/global.css
@@ -103,7 +103,7 @@ body {
 .contenidorCentral{
   max-width: 1100px;
   margin: auto;
-  background-color: rgb(196, 211, 255);
+  background-color: rgb(255, 255, 255);
   font-family: sys, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
   color: rgb(159, 144, 214);
   padding-top: 10px;
@@ -111,12 +111,15 @@ body {
   display: flex;
   flex-direction: column;
   
+  
+  
 }
 .contenidorCentral .contenedor{
   max-width: 1100px;
   margin: auto;
   background-color: rgb(196, 211, 255);
   display: inline-block;
+  
 }
 .contenidorCentral .logo-titulo {
   display: flex;
@@ -130,4 +133,49 @@ body {
   height: 110px;
   width: auto;
   align-items: center;
+}
+
+.colleccions{
+   display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 20px;
+  max-width: 1100px;
+  margin: auto;
+  text-align: center;
+}
+.carta{
+  flex: 1; /* hace que todas las cartas ocupen el mismo ancho */
+  background-color: #ede9f8;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 6px rgba(230, 90, 183, 0.1);
+}
+.carta h3{
+  margin-top: 0;
+  color: #d685e0;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.carta p{
+  color: #805f85;
+  
+}
+.etiqueta{
+  display: inline-block;
+  background-color: rgb(196, 211, 255);
+  padding: 4px 8px;
+  border-radius: 5px;
+  font-size: 12px;
+  margin-top: 10px;
+  color: #333;
+  text-align: center;
+}
+.imagen_etiqueta{
+  padding: 15px;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
 }
