--- a/global.css
+++ b/global.css
@@ -237,7 +237,7 @@ body {
 .tarjeta{
    flex: 1 1 260px;        /* ancho flexible, mínimo de 260px */
    max-width: 260px;
-  border: 1px solid rgb(141, 160, 214);
+  border: 1px solid rgb(170, 186, 233);
   padding: 16px;
   border-radius: 8px;
   text-align: center;
@@ -247,4 +247,43 @@ body {
   width: 100%;
   height: auto;
   max-width: 300px;
+}
+.contenedor_contacto{
+  max-width: 1100px;
+  margin: auto;
+  background-color: rgb(170, 186, 233);
+  padding-top: 10px;
+  align-items: center; 
+  display: flex;
+}
+.grid_contacto{
+  display: flex;              
+  flex-wrap: wrap;            
+  justify-content: center;
+  gap: 20px;                  
+  padding: 20px;
+  max-width: 1200px;
+  margin: auto;
+  flex-direction: column;
+}
+.tarjetas_contacto{
+  display: flex;
+  background-color: rgb(196, 211, 255);
+  padding: 4px 8px;
+  border-radius: 5px;
+  font-size: 13px;
+  color: #9d76d1;
+  text-align:center;
+  width: 260px;
+}
+.mensaje{
+  height: 80px;
+   display: flex;
+  background-color: rgb(196, 211, 255);
+  padding: 4px 8px;
+  border-radius: 5px;
+  font-size: 13px;
+  color:#9d76d1;
+  text-align:center;
+  width: 260px;
 }
