--- a/global.css
+++ b/global.css
@@ -260,11 +260,12 @@ body {
   display: flex;              
   flex-wrap: wrap;            
   justify-content: center;
-  gap: 20px;                  
-  padding: 20px;
+  gap: 10px;                  
+  padding: 50px;
   max-width: 1200px;
-  margin: auto;
+  margin: aut;
   flex-direction: column;
+  color: #5e3891;
 }
 .tarjetas_contacto{
   display: flex;
@@ -286,4 +287,7 @@ body {
   color:#9d76d1;
   text-align:center;
   width: 260px;
+}
+.mapa{
+  width: 300px;
 }
