--- a/global.css
+++ b/global.css
@@ -106,10 +106,11 @@ body {
   background-color: rgb(255, 255, 255);
   font-family: sys, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
   color: rgb(159, 144, 214);
-  padding-top: 10px;
+  padding: 20px;
   align-items: center; 
   display: flex;
   flex-direction: column;
+  border-radius: 10px;
   
   
   
