he tocado algo sin querer
he cambiado una cosa sin querer

--- a/global.css
+++ b/global.css
@@ -257,7 +257,7 @@ body {
   margin-top: 20px;
 }
 .grid_contacto{
-  display: flex;              
+  display: grid;              
   flex-wrap: wrap;            
   justify-content: center;
   gap: 10px;                  
